Qiskit is a dependency and test pip is available

--- a/tutorial/01_qsc_grn_pearson.ipynb
+++ b/tutorial/01_qsc_grn_pearson.ipynb
@@ -123,16 +123,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e68e98e7-c6da-4743-b40b-c67b0d4ebed2",
+   "id": "2a6db740-32bf-40fc-aa09-4300c9553507",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:43:51 | INFO | The dataframe genes are ordered\n",
-      "06-30-2022 14:43:51 | INFO | The observed probability `p_obs` is calculated\n",
-      "06-30-2022 14:43:51 | INFO | Activation ratios are computed\n"
+      "2022-07-04 14:56:13 | I | The dataframe genes are ordered\n",
+      "2022-07-04 14:56:13 | I | The observed probability `p_obs` is calculated\n",
+      "2022-07-04 14:56:13 | I | Activation ratios are computed\n"
      ]
     }
    ],
@@ -153,10 +153,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:43:57 | INFO | Plotting the Observed distribution in a barplot and exporting to p_obs.svg file.\n"
+      "2022-07-04 14:56:13 | I | Plotting the Observed distribution in a barplot and exporting to 01_p_obs.svg file.\n"
      ]
     },
     {
@@ -175,7 +175,7 @@
    "source": [
     "mask = mini_hist(ngenes, p_obs, limit=0.01, ymax=0.15,\n",
     "                 title=\"Observed distribution\",\n",
-    "                 filename=\"p_obs.svg\")"
+    "                 filename=\"01_p_obs.svg\")"
    ]
   },
   {
@@ -185,12 +185,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:44:07 | INFO | Theta series is initialized using zeros as method with activation values\n",
-      "06-30-2022 14:44:07 | INFO | Edges for the QuantumGRN and quantum circuit are created for 6 genes\n",
-      "06-30-2022 14:44:07 | INFO | The QuantumGRN model is been initialized with 6 genes and 28208 cells\n"
+      "2022-07-04 14:56:13 | I | Theta series is initialized using zeros as method with activation values\n",
+      "2022-07-04 14:56:13 | I | Edges for the QuantumGRN and quantum circuit are created for 6 genes\n",
+      "2022-07-04 14:56:13 | I | The QuantumGRN model is been initialized with 6 genes and 28208 cells\n"
      ]
     }
    ],
@@ -207,24 +207,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-30-2022 14:44:12 | INFO | Starting the optimization for the QuantumGRN\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100/100 [==================================================] - 5s 51ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-30-2022 14:44:17 | INFO | Optimization completed!!.. Due to the number of epochs reached\n"
+      "2022-07-04 14:56:13 | I | Starting the optimization for the QuantumGRN\n",
+      "100/100 [==================================================] - 5s 49ms/step\n",
+      "2022-07-04 14:56:18 | I | Optimization completed!!.. Due to the number of epochs reached\n"
      ]
     }
    ],
@@ -239,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_out =qgrn.p_out.reshape(2**ngenes,)"
+    "p_out = qgrn.p_out.reshape(2**ngenes,)"
    ]
   },
   {
@@ -249,10 +237,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:44:28 | INFO | Plotting the Comparison of distributions in a barplot and exporting to comparison.svg file.\n"
+      "2022-07-04 14:56:18 | I | Plotting the Comparison of distributions in a barplot and exporting to 01_comparison.svg file.\n"
      ]
     },
     {
@@ -270,7 +258,7 @@
    ],
    "source": [
     "comparison_hist(ngenes, p_obs, p_out, limit=0.01, ymax=0.15, mask=mask,\n",
-    "                filename=\"comparison.svg\")"
+    "                filename=\"01_comparison.svg\")"
    ]
   },
   {
@@ -280,15 +268,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:44:30 | INFO | Drawing the network representation of the qscGRN model and exporting to qgrn_network.svg file.\n"
+      "2022-07-04 14:56:19 | I | Drawing the network representation of the qscGRN model and exporting to 01_qgrn_network.svg file.\n"
      ]
     }
    ],
    "source": [
-    "draw_network(genes, edges, qgrn.theta, filename=\"qgrn_network.svg\")"
+    "draw_network(genes, edges, qgrn.theta, filename=\"01_qgrn_network.svg\")"
    ]
   },
   {
@@ -298,15 +286,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "06-30-2022 14:44:32 | INFO | Theta values during optimization are exported to evo_theta.csv\n"
+      "2022-07-04 14:56:19 | I | Theta values during optimization are exported to 01_evo_theta.csv\n"
      ]
     }
    ],
    "source": [
-    "qgrn.export_training_theta(\"evo_theta.csv\")"
+    "qgrn.export_training_theta(\"01_evo_theta.csv\")"
    ]
   },
   {
